--- a/VKontakteApp/Base.lproj/Main.storyboard
+++ b/VKontakteApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vpE-jC-sqr">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -113,6 +113,17 @@
                                             <action selector="cloudButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AgE-Ww-fqi"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gkc-GH-OMG">
+                                        <rect key="frame" x="150.66666666666666" y="490" width="89" height="40"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
+                                        <state key="normal" title="ВК Логин">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aUp-je-AbB"/>
+                                            <action selector="vkLoginPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Rx2-4n-bKf"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="fm9-eF-dOe" firstAttribute="top" secondItem="zgV-sf-FpE" secondAttribute="top" constant="65" id="1k3-3p-ToK"/>
@@ -121,6 +132,7 @@
                                     <constraint firstAttribute="trailing" secondItem="MJA-LH-i9D" secondAttribute="trailing" constant="163" id="4Ih-OD-27n"/>
                                     <constraint firstItem="JdY-3v-2ym" firstAttribute="centerX" secondItem="MJA-LH-i9D" secondAttribute="centerX" id="6fd-S3-C31"/>
                                     <constraint firstItem="wbL-SM-xuV" firstAttribute="leading" secondItem="JdY-3v-2ym" secondAttribute="trailing" constant="10" id="7wK-Nb-Qd7"/>
+                                    <constraint firstItem="Gkc-GH-OMG" firstAttribute="centerX" secondItem="MJA-LH-i9D" secondAttribute="centerX" id="8Yl-wM-Paq"/>
                                     <constraint firstItem="aPo-2U-v8a" firstAttribute="top" secondItem="kAj-oE-BjX" secondAttribute="bottom" constant="45" id="Ao0-Gw-xVi"/>
                                     <constraint firstItem="kAj-oE-BjX" firstAttribute="bottom" secondItem="JdY-3v-2ym" secondAttribute="bottom" id="Azj-hK-Bnk"/>
                                     <constraint firstItem="kAj-oE-BjX" firstAttribute="top" secondItem="JdY-3v-2ym" secondAttribute="top" id="K41-73-NqC"/>
@@ -135,6 +147,7 @@
                                     <constraint firstAttribute="bottom" secondItem="MJA-LH-i9D" secondAttribute="bottom" constant="188" id="bd9-9D-BQZ"/>
                                     <constraint firstItem="izm-1q-EFM" firstAttribute="trailing" secondItem="fm9-eF-dOe" secondAttribute="trailing" id="btu-8W-vpo"/>
                                     <constraint firstItem="0Nz-6I-wXA" firstAttribute="top" secondItem="l2f-Tk-y26" secondAttribute="bottom" constant="34" id="czb-vH-ddv"/>
+                                    <constraint firstItem="MJA-LH-i9D" firstAttribute="top" secondItem="Gkc-GH-OMG" secondAttribute="bottom" constant="8" id="e2X-dz-o7e"/>
                                     <constraint firstItem="dN6-hf-SfH" firstAttribute="centerX" secondItem="zgV-sf-FpE" secondAttribute="centerX" id="eV5-d4-Jha"/>
                                     <constraint firstItem="dN6-hf-SfH" firstAttribute="top" secondItem="0Nz-6I-wXA" secondAttribute="bottom" constant="8" symbolic="YES" id="h9y-qv-GaE"/>
                                     <constraint firstItem="kAE-MN-5WG" firstAttribute="leading" secondItem="aPo-2U-v8a" secondAttribute="leading" id="m86-Mq-eV9"/>
@@ -173,12 +186,36 @@
                         <outlet property="scrollView" destination="zgV-sf-FpE" id="dXx-4R-aXS"/>
                         <outlet property="secondDot" destination="JdY-3v-2ym" id="Y6Q-LY-kHp"/>
                         <outlet property="thirdDot" destination="wbL-SM-xuV" id="Wk4-Ez-EId"/>
+                        <outlet property="vkLogin" destination="Gkc-GH-OMG" id="Nj3-RI-5LA"/>
                         <segue destination="TcA-iD-tvC" kind="presentation" identifier="MainSegue" modalPresentationStyle="fullScreen" id="zsy-dA-zff"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3317" y="439"/>
+            <point key="canvasLocation" x="3316.9230769230767" y="438.62559241706157"/>
+        </scene>
+        <!--Login Form Controller-->
+        <scene sceneID="3th-Zi-0K1">
+            <objects>
+                <viewController id="vpE-jC-sqr" customClass="VKLoginFormController" customModule="VKontakteApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <wkWebView key="view" contentMode="scaleToFill" id="ymy-J4-FMJ">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <wkWebViewConfiguration key="configuration">
+                            <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                            <wkPreferences key="preferences"/>
+                        </wkWebViewConfiguration>
+                    </wkWebView>
+                    <navigationItem key="navigationItem" id="4Ji-V5-cX1"/>
+                    <connections>
+                        <outlet property="webView" destination="ymy-J4-FMJ" id="Ffh-Ac-rXi"/>
+                        <segue destination="TcA-iD-tvC" kind="presentation" identifier="TabBarSegue" modalPresentationStyle="fullScreen" id="jZF-iP-KdO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yNB-n1-AAa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3317" y="1231"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="YZa-xm-rh0">
@@ -513,6 +550,7 @@
                     <navigationItem key="navigationItem" title="Профиль" id="ub2-2J-luv">
                         <barButtonItem key="rightBarButtonItem" title="Выход" id="4DV-rC-8Aw">
                             <connections>
+                                <action selector="myUnwindAction:" destination="BhO-3c-FeK" id="chG-Jw-1po"/>
                                 <segue destination="BhO-3c-FeK" kind="unwind" unwindAction="myUnwindActionWithUnwindSegue:" id="4Gk-GU-G7h"/>
                             </connections>
                         </barButtonItem>
@@ -919,6 +957,9 @@
             <point key="canvasLocation" x="5085" y="2426"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="jZF-iP-KdO"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="circle.grid.2x2.fill" catalog="system" width="128" height="112"/>
         <image name="compactLogo" width="960" height="960"/>
