--- a/VKontakteApp/Base.lproj/Main.storyboard
+++ b/VKontakteApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vpE-jC-sqr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -113,17 +113,6 @@
                                             <action selector="cloudButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AgE-Ww-fqi"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gkc-GH-OMG">
-                                        <rect key="frame" x="150.66666666666666" y="490" width="89" height="40"/>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
-                                        <state key="normal" title="ВК Логин">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aUp-je-AbB"/>
-                                            <action selector="vkLoginPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Rx2-4n-bKf"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="fm9-eF-dOe" firstAttribute="top" secondItem="zgV-sf-FpE" secondAttribute="top" constant="65" id="1k3-3p-ToK"/>
@@ -132,7 +121,6 @@
                                     <constraint firstAttribute="trailing" secondItem="MJA-LH-i9D" secondAttribute="trailing" constant="163" id="4Ih-OD-27n"/>
                                     <constraint firstItem="JdY-3v-2ym" firstAttribute="centerX" secondItem="MJA-LH-i9D" secondAttribute="centerX" id="6fd-S3-C31"/>
                                     <constraint firstItem="wbL-SM-xuV" firstAttribute="leading" secondItem="JdY-3v-2ym" secondAttribute="trailing" constant="10" id="7wK-Nb-Qd7"/>
-                                    <constraint firstItem="Gkc-GH-OMG" firstAttribute="centerX" secondItem="MJA-LH-i9D" secondAttribute="centerX" id="8Yl-wM-Paq"/>
                                     <constraint firstItem="aPo-2U-v8a" firstAttribute="top" secondItem="kAj-oE-BjX" secondAttribute="bottom" constant="45" id="Ao0-Gw-xVi"/>
                                     <constraint firstItem="kAj-oE-BjX" firstAttribute="bottom" secondItem="JdY-3v-2ym" secondAttribute="bottom" id="Azj-hK-Bnk"/>
                                     <constraint firstItem="kAj-oE-BjX" firstAttribute="top" secondItem="JdY-3v-2ym" secondAttribute="top" id="K41-73-NqC"/>
@@ -147,7 +135,6 @@
                                     <constraint firstAttribute="bottom" secondItem="MJA-LH-i9D" secondAttribute="bottom" constant="188" id="bd9-9D-BQZ"/>
                                     <constraint firstItem="izm-1q-EFM" firstAttribute="trailing" secondItem="fm9-eF-dOe" secondAttribute="trailing" id="btu-8W-vpo"/>
                                     <constraint firstItem="0Nz-6I-wXA" firstAttribute="top" secondItem="l2f-Tk-y26" secondAttribute="bottom" constant="34" id="czb-vH-ddv"/>
-                                    <constraint firstItem="MJA-LH-i9D" firstAttribute="top" secondItem="Gkc-GH-OMG" secondAttribute="bottom" constant="8" id="e2X-dz-o7e"/>
                                     <constraint firstItem="dN6-hf-SfH" firstAttribute="centerX" secondItem="zgV-sf-FpE" secondAttribute="centerX" id="eV5-d4-Jha"/>
                                     <constraint firstItem="dN6-hf-SfH" firstAttribute="top" secondItem="0Nz-6I-wXA" secondAttribute="bottom" constant="8" symbolic="YES" id="h9y-qv-GaE"/>
                                     <constraint firstItem="kAE-MN-5WG" firstAttribute="leading" secondItem="aPo-2U-v8a" secondAttribute="leading" id="m86-Mq-eV9"/>
@@ -186,13 +173,12 @@
                         <outlet property="scrollView" destination="zgV-sf-FpE" id="dXx-4R-aXS"/>
                         <outlet property="secondDot" destination="JdY-3v-2ym" id="Y6Q-LY-kHp"/>
                         <outlet property="thirdDot" destination="wbL-SM-xuV" id="Wk4-Ez-EId"/>
-                        <outlet property="vkLogin" destination="Gkc-GH-OMG" id="Nj3-RI-5LA"/>
-                        <segue destination="TcA-iD-tvC" kind="presentation" identifier="MainSegue" modalPresentationStyle="fullScreen" id="zsy-dA-zff"/>
+                        <segue destination="vpE-jC-sqr" kind="presentation" identifier="MainSegue" modalPresentationStyle="fullScreen" id="kPM-sI-KGa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3316.9230769230767" y="438.62559241706157"/>
+            <point key="canvasLocation" x="3280" y="-353"/>
         </scene>
         <!--Login Form Controller-->
         <scene sceneID="3th-Zi-0K1">
@@ -215,7 +201,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yNB-n1-AAa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3317" y="1231"/>
+            <point key="canvasLocation" x="3280" y="439"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="YZa-xm-rh0">
@@ -291,12 +277,18 @@
                                                         <action selector="avatarAnimate:" destination="d3c-Tt-rN4" eventType="touchUpInside" id="mZw-nq-nSU"/>
                                                     </connections>
                                                 </button>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="greenDot" translatesAutoresizingMaskIntoConstraints="NO" id="2JD-EY-YpP">
+                                                    <rect key="frame" x="38" y="38" width="15" height="15"/>
+                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             <constraints>
+                                                <constraint firstItem="2JD-EY-YpP" firstAttribute="leading" secondItem="32S-Na-mR1" secondAttribute="leading" constant="38" id="4bv-vo-mkD"/>
                                                 <constraint firstAttribute="trailing" secondItem="RuV-qd-Pqo" secondAttribute="trailing" id="5HT-sb-6nM"/>
+                                                <constraint firstAttribute="trailing" secondItem="2JD-EY-YpP" secondAttribute="trailing" constant="2" id="6xe-vQ-xAj"/>
                                                 <constraint firstItem="RuV-qd-Pqo" firstAttribute="centerY" secondItem="32S-Na-mR1" secondAttribute="centerY" id="BSY-rh-obj"/>
                                                 <constraint firstAttribute="height" constant="55" id="ITS-pz-aA0"/>
+                                                <constraint firstAttribute="bottom" secondItem="2JD-EY-YpP" secondAttribute="bottom" constant="2" id="TBI-L2-Ocj"/>
                                                 <constraint firstItem="RuV-qd-Pqo" firstAttribute="top" secondItem="32S-Na-mR1" secondAttribute="top" id="VNR-ze-Ssa"/>
                                                 <constraint firstAttribute="bottom" secondItem="RuV-qd-Pqo" secondAttribute="bottom" id="YFp-TE-C4y"/>
                                                 <constraint firstItem="99U-8u-dw1" firstAttribute="centerX" secondItem="32S-Na-mR1" secondAttribute="centerX" id="cKo-YH-7cd"/>
@@ -305,6 +297,7 @@
                                                 <constraint firstItem="99U-8u-dw1" firstAttribute="centerY" secondItem="32S-Na-mR1" secondAttribute="centerY" id="nsv-JL-5wB"/>
                                                 <constraint firstAttribute="bottom" secondItem="99U-8u-dw1" secondAttribute="bottom" id="tAz-A6-Mor"/>
                                                 <constraint firstItem="99U-8u-dw1" firstAttribute="top" secondItem="32S-Na-mR1" secondAttribute="top" id="tCn-Qw-Dx1"/>
+                                                <constraint firstItem="2JD-EY-YpP" firstAttribute="top" secondItem="32S-Na-mR1" secondAttribute="top" constant="38" id="txt-0T-bOg"/>
                                                 <constraint firstAttribute="width" constant="55" id="vJH-Xr-ydS"/>
                                                 <constraint firstItem="RuV-qd-Pqo" firstAttribute="centerX" secondItem="32S-Na-mR1" secondAttribute="centerX" id="xdk-8H-pbf"/>
                                                 <constraint firstAttribute="trailing" secondItem="99U-8u-dw1" secondAttribute="trailing" id="znw-os-hn2"/>
@@ -342,6 +335,7 @@
                                     <outlet property="friendImageView" destination="32S-Na-mR1" id="xym-51-WUS"/>
                                     <outlet property="friendName" destination="qUA-di-MJq" id="KDE-Qb-rex"/>
                                     <outlet property="friendStatus" destination="PRk-Kl-xBn" id="Cr5-vP-nRw"/>
+                                    <outlet property="friendStatusView" destination="2JD-EY-YpP" id="5cQ-Gw-gQq"/>
                                     <segue destination="h81-nK-dvJ" kind="show" identifier="ShowUserInfo" id="F0X-Pv-lxh"/>
                                 </connections>
                             </tableViewCell>
@@ -957,13 +951,11 @@
             <point key="canvasLocation" x="5085" y="2426"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="jZF-iP-KdO"/>
-    </inferredMetricsTieBreakers>
     <resources>
         <image name="circle.grid.2x2.fill" catalog="system" width="128" height="112"/>
         <image name="compactLogo" width="960" height="960"/>
         <image name="eye.fill" catalog="system" width="128" height="78"/>
+        <image name="greenDot" width="1024" height="1024"/>
         <image name="newspaper.fill" catalog="system" width="128" height="111"/>
         <image name="person.3.fill" catalog="system" width="128" height="61"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
