--- a/VKontakteApp/Base.lproj/Main.storyboard
+++ b/VKontakteApp/Base.lproj/Main.storyboard
@@ -278,12 +278,12 @@
                                                     </connections>
                                                 </button>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="greenDot" translatesAutoresizingMaskIntoConstraints="NO" id="2JD-EY-YpP">
-                                                    <rect key="frame" x="38" y="38" width="15" height="15"/>
+                                                    <rect key="frame" x="41" y="41" width="12" height="12"/>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             <constraints>
-                                                <constraint firstItem="2JD-EY-YpP" firstAttribute="leading" secondItem="32S-Na-mR1" secondAttribute="leading" constant="38" id="4bv-vo-mkD"/>
+                                                <constraint firstItem="2JD-EY-YpP" firstAttribute="leading" secondItem="32S-Na-mR1" secondAttribute="leading" constant="41" id="4bv-vo-mkD"/>
                                                 <constraint firstAttribute="trailing" secondItem="RuV-qd-Pqo" secondAttribute="trailing" id="5HT-sb-6nM"/>
                                                 <constraint firstAttribute="trailing" secondItem="2JD-EY-YpP" secondAttribute="trailing" constant="2" id="6xe-vQ-xAj"/>
                                                 <constraint firstItem="RuV-qd-Pqo" firstAttribute="centerY" secondItem="32S-Na-mR1" secondAttribute="centerY" id="BSY-rh-obj"/>
@@ -297,7 +297,7 @@
                                                 <constraint firstItem="99U-8u-dw1" firstAttribute="centerY" secondItem="32S-Na-mR1" secondAttribute="centerY" id="nsv-JL-5wB"/>
                                                 <constraint firstAttribute="bottom" secondItem="99U-8u-dw1" secondAttribute="bottom" id="tAz-A6-Mor"/>
                                                 <constraint firstItem="99U-8u-dw1" firstAttribute="top" secondItem="32S-Na-mR1" secondAttribute="top" id="tCn-Qw-Dx1"/>
-                                                <constraint firstItem="2JD-EY-YpP" firstAttribute="top" secondItem="32S-Na-mR1" secondAttribute="top" constant="38" id="txt-0T-bOg"/>
+                                                <constraint firstItem="2JD-EY-YpP" firstAttribute="top" secondItem="32S-Na-mR1" secondAttribute="top" constant="41" id="txt-0T-bOg"/>
                                                 <constraint firstAttribute="width" constant="55" id="vJH-Xr-ydS"/>
                                                 <constraint firstItem="RuV-qd-Pqo" firstAttribute="centerX" secondItem="32S-Na-mR1" secondAttribute="centerX" id="xdk-8H-pbf"/>
                                                 <constraint firstAttribute="trailing" secondItem="99U-8u-dw1" secondAttribute="trailing" id="znw-os-hn2"/>
@@ -309,7 +309,7 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PRk-Kl-xBn">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PRk-Kl-xBn" userLabel="Friend City">
                                             <rect key="frame" x="110" y="45" width="0.0" height="18"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
                                             <nil key="textColor"/>
@@ -331,10 +331,10 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="friendCity" destination="PRk-Kl-xBn" id="bsZ-Op-96O"/>
                                     <outlet property="friendImage" destination="RuV-qd-Pqo" id="9kx-qP-ZhM"/>
                                     <outlet property="friendImageView" destination="32S-Na-mR1" id="xym-51-WUS"/>
                                     <outlet property="friendName" destination="qUA-di-MJq" id="KDE-Qb-rex"/>
-                                    <outlet property="friendStatus" destination="PRk-Kl-xBn" id="Cr5-vP-nRw"/>
                                     <outlet property="friendStatusView" destination="2JD-EY-YpP" id="5cQ-Gw-gQq"/>
                                     <segue destination="h81-nK-dvJ" kind="show" identifier="ShowUserInfo" id="F0X-Pv-lxh"/>
                                 </connections>
@@ -367,11 +367,11 @@
             </objects>
             <point key="canvasLocation" x="6914" y="38"/>
         </scene>
-        <!--Группы-->
+        <!--Сообщества-->
         <scene sceneID="roK-hW-6U1">
             <objects>
                 <navigationController id="mi0-aW-goE" customClass="CustomNavigationController" customModule="VKontakteApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Группы" image="circle.grid.2x2.fill" catalog="system" id="bwB-XN-iyE"/>
+                    <tabBarItem key="tabBarItem" title="Сообщества" image="circle.grid.2x2.fill" catalog="system" id="bwB-XN-iyE"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ltK-ku-pts">
                         <rect key="frame" x="0.0" y="44" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -384,7 +384,7 @@
             </objects>
             <point key="canvasLocation" x="5085" y="841"/>
         </scene>
-        <!--Мои группы-->
+        <!--Мои сообщества-->
         <scene sceneID="lRH-WP-j7m">
             <objects>
                 <tableViewController id="5sM-Gk-dqf" customClass="MyGroupsTableController" customModule="VKontakteApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -460,10 +460,10 @@
                             <outlet property="delegate" destination="5sM-Gk-dqf" id="ATL-27-vdu"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Мои группы" id="Rcn-gD-AC7">
+                    <navigationItem key="navigationItem" title="Мои сообщества" id="Rcn-gD-AC7">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="J2p-dB-Tzy">
                             <connections>
-                                <segue destination="86G-vx-i2P" kind="show" id="ksl-E9-H5c"/>
+                                <segue destination="86G-vx-i2P" kind="show" identifier="addGroup" id="ksl-E9-H5c"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -828,7 +828,7 @@
             </objects>
             <point key="canvasLocation" x="6913.8461538461534" y="1633.649289099526"/>
         </scene>
-        <!--Группы-->
+        <!--Сообщества-->
         <scene sceneID="cTp-2b-woK">
             <objects>
                 <tableViewController id="86G-vx-i2P" customClass="AllGroupsTableController" customModule="VKontakteApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -904,7 +904,7 @@
                             <outlet property="delegate" destination="86G-vx-i2P" id="EsT-DK-lzU"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Группы" id="OcH-za-nLc"/>
+                    <navigationItem key="navigationItem" title="Сообщества" id="OcH-za-nLc"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1h6-fV-Rwd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="1gE-De-T6F" userLabel="Exit" sceneMemberID="exit"/>
